--- a/4_Backend/expressJs/BE_Main/package.json
+++ b/4_Backend/expressJs/BE_Main/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
