--- a/5_React/main-project/.env
+++ b/5_React/main-project/.env
@@ -3,3 +3,4 @@ VITE_APPWRITE_PROJECT_ID="6864d603002c7260d73c"
 VITE_APPWRITE_DATABASE_ID="6864d62d001e7d1488e0"
 VITE_APPWRITE_COLLECTION_ID="6864d6400034ea7c6c8d"
 VITE_APPWRITE_BUCKET_ID="6864d7ab001bceafd718"
+VITE_RTE_API_KEY="9eu1a07z14hhmfc7m30bwhex1alig54xtkrsaj909rf7fq00"
